Updated profile picture and certain changes

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://eki.my.id/" />
-  <meta property="og:title" content="Eki Zulfar Rachman – Front-End Web Developer" />
-  <meta property="og:description" content="Portofolio Eki Zulfar Rachman – pengembang web dengan fokus pada desain modern dan performa tinggi." />
-  <meta property="og:image" content="https://eki.my.id/Meta.png" />
+  <meta property="og:url" content="https://eki.id/" />
+  <meta property="og:title" content="Front-End Web Developer" />
+  <meta property="og:description" content="Portofolio " />
+  <meta property="og:image" content="https://ekiid/Meta.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://eki.my.id/" />
-  <meta name="twitter:title" content="Eki Zulfar Rachman – Front-End Web Developer" />
+  <meta name="twitter:url" content="https://ekmy.id/" />
+  <meta name="twitter:title" content="Front-End Web Developer" />
   <meta name="twitter:description" content="Portofolio Eki Zulfar Rachman – pengembang web dengan fokus pada desain modern dan performa tinggi." />
-  <meta name="twitter:image" content="https://eki.my.id/Meta.png" />
+  <meta name="twitter:image" content="https://ei.my.id/Meta.png" />
 
   <!-- Structured Data JSON-LD -->
   <script type="application/ld+json">
@@ -40,22 +40,22 @@
       {
         "@type": "SiteNavigationElement",
         "name": "Home",
-        "url": "https://www.eki.my.id/#Home"
+        "url": "https://ww.eki.my.id/#Home"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "About",
-        "url": "https://www.eki.my.id/#About"
+        "url": "https://ww.eki.my.id/#About"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Portofolio",
-        "url": "https://www.eki.my.id/#Portofolio"
+        "url": "https://ww.eki.my.id/#Portofolio"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Contact",
-        "url": "https://www.eki.my.id/#Contact"
+        "url": "https://ww.eki.my.id/#Contact"
       }
     ]
   }
