Updated project files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <!-- Primary Meta Tags -->
   <title>Shounak Mandal – Front-End Web Developer</title>
-  <meta name="title" content="Eki Zulfar Rachman – Front-End Web Developer" />
-  <meta name="description" content="Saya Eki Zulfar Rachman, pengembang web front-end yang berfokus pada desain antarmuka modern, responsif, dan performa tinggi. Lihat portofolio dan kontak saya di sini." />
-  <meta name="keywords" content="Eki, Eki Zulfar, Front-End Developer, Web Developer Indonesia, Portofolio Eki, ekizr" />
-  <meta name="google-site-verification" content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A" />
+  <meta name="title" content="Shounak Mandal – Web Developer" />
+  <meta name="description" content="I am Shounak Mandal, a front-end web developer focusing on modern, responsive, and high-performance interface design. View my portfolio and contact me here." />
+  <meta name="keywords" content="Shounak, Shounak Mandal, Front-End Developer, Web Developer, Portfolio Shounak" />
+  <meta name="google-site-verification" content="EjnDWC4W2tVVQqrvp0GKi3j5dD2WkNQtu-TY49KpKPk" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#030014" />
@@ -19,17 +19,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://eki.id/" />
-  <meta property="og:title" content="Front-End Web Developer" />
-  <meta property="og:description" content="Portofolio " />
-  <meta property="og:image" content="https://ekiid/Meta.png" />
+  <meta property="og:url" content="https://shounak.dev/" />
+  <meta property="og:title" content="Web Developer" />
+  <meta property="og:description" content="Portfolio" />
+  <meta property="og:image" content="https://shounak.dev/Meta.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://ekmy.id/" />
-  <meta name="twitter:title" content="Front-End Web Developer" />
-  <meta name="twitter:description" content="Portofolio Eki Zulfar Rachman – pengembang web dengan fokus pada desain modern dan performa tinggi." />
-  <meta name="twitter:image" content="https://ei.my.id/Meta.png" />
+  <meta name="twitter:url" content="https://shounak.dev/" />
+  <meta name="twitter:title" content="Web Developer" />
+  <meta name="twitter:description" content="Portfolio of Shounak Mandal – a web developer focused on modern design and high performance." />
+  <meta name="twitter:image" content="https://shounak.dev/Meta.png" />
 
   <!-- Structured Data JSON-LD -->
   <script type="application/ld+json">
@@ -40,22 +40,22 @@
       {
         "@type": "SiteNavigationElement",
         "name": "Home",
-        "url": "https://ww.eki.my.id/#Home"
+        "url": "https://shounak.dev/#Home"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "About",
-        "url": "https://ww.eki.my.id/#About"
+        "url": "https://shounak.dev/#About"
       },
       {
         "@type": "SiteNavigationElement",
-        "name": "Portofolio",
-        "url": "https://ww.eki.my.id/#Portofolio"
+        "name": "Portfolio",
+        "url": "https://shounak.dev/#Portfolio"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Contact",
-        "url": "https://ww.eki.my.id/#Contact"
+        "url": "https://shounak.dev/#Contact"
       }
     ]
   }
@@ -65,7 +65,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  
-
   </body>
 </html>
